Fix layout issue when game won

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+canvas {
+  width: 100%;
+}
+
 body {
   padding: 20px;
   margin: 0;
@@ -156,6 +160,10 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  main {
+    min-width: 460px;
   }
 
   .dice-container {
